<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="64dp"
    android:background="@drawable/rounded_bg"
    android:backgroundTint="#BC8EFD"
    android:padding="16dp">

    <TextView
        android:id="@+id/enterPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/enter_the_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/enterPasswordTV"
        android:layout_alignEnd="@id/enterPasswordTV"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_below="@id/enterPasswordTV"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/colorGrayItem"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="14dp"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPassword"/>

</RelativeLayout>